# discord-oauth-with-fastAPI

./: .env.sample  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: __init__.py  database.py  redis.py
app/dependencies/: __init__.py
app/models/: __init__.py  base.py
app/routers/: auth.py  user.py
app/starlette_session/: __init__.py  backends.py
